# simplex_assimilate

./: .coverage  .gitignore  README.md  beta_dirichlet.py  delta.py  envs.toml  open.txt  pyproject.toml  tests_kb.py  trans.py
.hypothesis/examples/0722ee62f1ce90f3/: 0aefa92e56c03b72  0bda8318e8e7739d  0f2f4fea022f7440  0f8492b3744f8d72  212da8204b7bb5b0  24e4e39443c9801a  279d4bb4d097471b  37c55130071c2796  48255251434e0082  484429e06300700d  5aeff775975a0c4e  64cd399afd764fc5  67ba68565beefc51  6ca3bf9913fe56b6  88d70add4138f89c  89f82a4d70f73af1  8a62212e66c97b04  8e71f8cce7aed8b5  8ff589046e402e35  90fd1b6d65949246  9b2067ea2ce89948  a76b6294ad642702  a9437eda9f285f1c  b16a12fcc066b074  b84d42078a33aeaa  b950f423cdc2ad6b  d42e9f9688ebe4d3  d4ab1353c39a4d63  d7f12f40b33e96a7  e55b1559add48de7  e5894c3beeafcd22  eaefbd9eb6046c9c  ebe9346e0edfed55  (+5 more)
dirichlet_assimilate/: chain.py  deltize.py  dirichlet.py  dirichlet_mle.py  examples.py  observe_binom.py  shared_classes.py  visualisation.py  visualize.py
simplex_assimilate/: __init__.py  cdf_transport.py  delta.py  deltaRep.py  dirichlet.py  failed_dirFit_class_samples.py  fixed_point.py  quantize.py  shared_classes.py  simple_class_transport.py  t.ipynb  test.py  transport.py
simplex_assimilate/dirichlet/: dirichlet.py
simplex_assimilate/utils/: quantize.py
tests/: deltize.ipynb  dirichlet_mle.ipynb  test_cdf.py  test_cdf_transport.py  test_core.py  test_deltaRep.py  test_deltize.py  test_dirichlet.py  test_dirichlet_mle.py  test_quantize.py  test_simple_class_transport.py  test_transport.py  visualize.ipynb
(+2458 files in other folders)
