[tool.poetry]
name = "dirichlet-assimilate"
version = "0.1.0"
description = "Perform Data Assimilation on the Simplex. Models an ensemble as a mixture of Dirichlet distributions."
authors = ["Oscar Laird <olaird25@gmail.com>"]
readme = "README.md"
packages = [{include = "dirichlet_assimilate"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
fire = "^0.5.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
